crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__captures_wrapper_struct.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = {{(identifier) @id (number) @num} @row}* @rows
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "row"
S4 "rows"
S5 "Test"
S6 "number"
S7 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, num }
T2 = Struct  M2:1  ; { row }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M3:1  ; { rows }
T5 = Struct  M4:1  ; { id }
T6 = Struct  M5:1  ; { num }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; num: <Node>
M2: S3 → T1  ; row: T1
M3: S4 → T3  ; rows: T3
M4: S1 → T0  ; id: <Node>
M5: S2 → T0  ; num: <Node>

[type_names]
N0: S5 → T4  ; Test

[entrypoints]
Test = 01 :: T4

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε   [Arr]                            06
  06   ε                                    32, 15
  08   ε   [EndObj Push]                    10
  10   ε                                    38, 15
  12                                        ▶
  13   ε   [EndObj]                         12
  15   ε   [EndArr Set(M3)]                 13
  17   ε   [EndObj Set(M2)]                 08
  19   ▷   (number) [Node Set(M1)]          17
  21       (identifier) [Node Set(M0)]      19
  23   ε   [Obj]                            21
  25   ε   [Obj]                            23
  27   ▷                                    30
  28   ε                                    27, 15
  30   ε                                    25, 28
  32   ▽                                    30
  33   ▷                                    36
  34   ε                                    33, 15
  36   ε                                    25, 34
  38   ▷                                    36
