crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__comprehensive_multi_definition.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Ident = (identifier) @name :: string
Expression = [
    Literal: (number) @value
    Variable: (identifier) @name
]
Assignment = (assignment_expression
    left: (identifier) @target
    right: (Expression) @value)
---
[flags]
linked = false

[strings]
S00 "Beauty will save the world"
S01 "name"
S02 "value"
S03 "Literal"
S04 "Variable"
S05 "target"
S06 "Ident"
S07 "Expression"
S08 "Assignment"
S09 "identifier"
S10 "number"
S11 "assignment_expression"
S12 "right"
S13 "left"

[type_defs]
T00 = <Node>
T01 = <String>
T02 = Struct  M0:1  ; { name }
T03 = Struct  M1:1  ; { value }
T04 = Struct  M2:1  ; { name }
T05 = Enum    M3:2  ; Literal | Variable
T06 = Struct  M5:2  ; { value, target }
T07 = Struct  M7:1  ; { target }
T08 = Struct  M8:1  ; { value }

[type_members]
M0: S01 → T01  ; name: <String>
M1: S02 → T00  ; value: <Node>
M2: S01 → T00  ; name: <Node>
M3: S03 → T03  ; Literal: T03
M4: S04 → T04  ; Variable: T04
M5: S02 → T05  ; value: Expression
M6: S05 → T00  ; target: <Node>
M7: S05 → T00  ; target: <Node>
M8: S02 → T05  ; value: Expression

[type_names]
N0: S06 → T02  ; Ident
N1: S07 → T05  ; Expression
N2: S08 → T06  ; Assignment

[entrypoints]
Assignment = 12 :: T06
Expression = 09 :: T05
Ident      = 01 :: T02

[transitions]
  00   ε                                    ◼

Ident:
  01   ε                                    02
  02   ε   [Obj]                            04
  04       (identifier) [Text Set(M0)]      06
  06   ε   [EndObj]                         08
  08                                        ▶

Expression:
  09   ε                                    10
  10   ε                                    30, 36

Assignment:
  12   ε                                    13
  13   ε   [Obj]                            15
  15       (assignment_expression)          16
  16   ▽   left: (identifier) [Node Set(M6)]  18
  18   ▷   right: (Expression)              19 ⯇
  19   ε   [Set(M5)]                        21
  21   △                                    22
  22   ε   [EndObj]                         24
  24                                        ▶
  25                                        ▶
  26   ε   [EndEnum]                        25
  28       (number) [Node Set(M1)]          26
  30   ε   [Enum(M3)]                       28
  32   ε   [EndEnum]                        25
  34       (identifier) [Node Set(M2)]      32
  36   ε   [Enum(M4)]                       34
