crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__definitions_multiple.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Foo = (identifier) @id
Bar = (string) @str
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "str"
S3 "Foo"
S4 "Bar"
S5 "identifier"
S6 "string"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { str }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; str: <Node>

[type_names]
N0: S3 → T1  ; Foo
N1: S4 → T2  ; Bar

[entrypoints]
Bar = 5 :: T2
Foo = 1 :: T1

[transitions]
  0   ε                                     ◼

Foo:
  1   ε                                     2
  2       (identifier) [Node Set(M0)]       4
  4                                         ▶

Bar:
  5   ε                                     6
  6       (string) [Node Set(M1)]           8
  8                                         ▶
