crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__definitions_nested_capture.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Inner = (call (identifier) @name)
Outer = (parent {(Inner) @item}* @items)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Inner"
S5 "Outer"
S6 "call"
S7 "identifier"
S8 "parent"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M2:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T1  ; item: Inner
M2: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Inner
N1: S5 → T4  ; Outer

[entrypoints]
Inner = 01 :: T1
Outer = 11 :: T4

[transitions]
  00   ε                                    ◼

Inner:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   !   (call)                           05
  05   ▽   (identifier) [Node Set(M0)]      07
  07   △                                    08
  08   ε   [EndObj]                         10
  10                                        ▶

Outer:
  11   ε                                    12
  12   ε   [Obj]                            14
  14   !   (parent)                         15
  15   ε   [Arr]                            17
  17   ε                                    41, 29
  19   ε   [EndArr Set(M2)]                 21
  21   △                                    27
  22   ε   [EndObj Push]                    24
  24   ε                                    47, 19
  26                                        ▶
  27   ε   [EndObj]                         26
  29   ε   [EndArr Set(M2)]                 27
  31   ε   [Set(M1)]                        22
  33   !   (Inner)                          01 : 31
  34   ε   [Obj]                            33
  36   ▷                                    39
  37   ε                                    36, 29
  39   ε                                    34, 37
  41   ▽                                    39
  42   ▷                                    45
  43   ε                                    42, 19
  45   ε                                    34, 43
  47   ▷                                    45
