crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__definitions_reference.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Expression = [(identifier) @name (number) @value]
Root = (function_declaration name: (identifier) @name)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "value"
S3 "Expression"
S4 "Root"
S5 "identifier"
S6 "number"
S7 "function_declaration"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { name, value }
T2 = Struct  M2:1  ; { name }
T3 = Struct  M3:1  ; { value }
T4 = Optional(T0)  ; <Node>?

[type_members]
M0: S1 → T4  ; name: T4
M1: S2 → T4  ; value: T4
M2: S1 → T0  ; name: <Node>
M3: S2 → T0  ; value: <Node>

[type_names]
N0: S3 → T1  ; Expression
N1: S4 → T2  ; Root

[entrypoints]
Expression = 01 :: T1
Root       = 06 :: T2

[transitions]
  00   ε                                    ◼

Expression:
  01   ε                                    02
  02   ε   [Obj]                            04
  04   ε                                    21, 25

Root:
  06   ε                                    07
  07   ε   [Obj]                            09
  09   !   (function_declaration)           10
  10   ▽   name: (identifier) [Node Set(M2)]  12
  12   △                                    13
  13   ε   [EndObj]                         15
  15                                        ▶
  16                                        ▶
  17   ε   [EndObj]                         16
  19   !   (identifier) [Node Set(M0)]      17
  21   ε   [Null Set(M1)]                   19
  23   !   (number) [Node Set(M1)]          17
  25   ε   [Null Set(M0)]                   23
