crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__fields_multiple.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (binary_expression
    left: (_) @left
    right: (_) @right)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "left"
S2 "right"
S3 "Test"
S4 "binary_expression"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { left, right }
T2 = Struct  M2:1  ; { left }
T3 = Struct  M3:1  ; { right }

[type_members]
M0: S1 → T0  ; left: <Node>
M1: S2 → T0  ; right: <Node>
M2: S1 → T0  ; left: <Node>
M3: S2 → T0  ; right: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   (binary_expression)              08
  08   ▽   left: (_) [Node Set(M0)]         10
  10   ▷   right: (_) [Node Set(M1)]        12
  12   △                                    13
  13                                        ▶
