crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__fields_negated.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (function_declaration name: (identifier) @name -type_parameters)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "Test"
S3 "function_declaration"
S4 "type_parameters"
S5 "identifier"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }

[type_members]
M0: S1 → T0  ; name: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00   ε   [Obj]                            02
  02       Trampoline                       03
  03   ε   [EndObj]                         05
  05                                        ▶

Test:
  06   ε                                    07
  07   !   -type_parameters (function_declaration)  09
  09   ▽   name: (identifier) [Node Set(M0)]  11
  11   △                                    12
  12                                        ▶
