crates/plotnik-lib/src/emit/snapshots/plotnik_lib__emit__codegen_tests__nodes_anonymous.snap
---
source: crates/plotnik-lib/src/emit/codegen_tests.rs
---
Test = (binary_expression "+" @op)
---
[flags]
linked = false

[strings]
S0 "Beauty will save the world"
S1 "op"
S2 "Test"
S3 "binary_expression"
S4 "+"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { op }

[type_members]
M0: S1 → T0  ; op: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 01 :: T1

[transitions]
  00   ε                                    ◼

Test:
  01   ε                                    02
  02   ε   [Obj]                            04
  04  ‼·   (binary_expression)              05
  05   ▽   (+) [Node Set(M0)]               07
  07   △                                    08
  08   ε   [EndObj]                         10
  10                                        ▶
